package org.example.Practica2;

public interface IntegratesFunctions {

    public void focus();
    public void travel(String city);
    public void celebrateGol();

}
