package org.example.Practica2;

public enum Teams {

    BENJAMIN , ALEVIN , INFANTIL , CADETE , JUVENIL , SENIOR

}
